# hpc-libs

./: CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  charmcraft.yaml  dev-requirements.txt  justfile  pyproject.toml  tox.ini
.github/workflows/: ci.yaml  nightly-TICS.yaml  release-libs.yaml
lib/charms/hpc_libs/v0/: is_container.py  slurm_ops.py
src/: charm.py
src/charmed_hpc_libs/: __init__.py
src/charmed_hpc_libs/errors/: __init__.py
src/charmed_hpc_libs/interfaces/: __init__.py  interface.py
src/charmed_hpc_libs/ops/: __init__.py  conditions.py  env.py  logging.py  network.py  secrets.py
src/charmed_hpc_libs/ops/core/: __init__.py  call.py  service.py
src/charmed_hpc_libs/ops/machine/: __init__.py  snap.py  systemd.py
src/hpc_libs/: __init__.py  errors.py  is_container.py  slurm_ops.py  utils.py
src/hpc_libs/interfaces/: __init__.py  base.py
src/hpc_libs/interfaces/slurm/: __init__.py  common.py  oci_runtime.py  sackd.py  slurmd.py  slurmdbd.py  slurmrestd.py
src/hpc_libs/machine/: __init__.py  apt.py  env.py  snap.py  systemd.py
src/hpc_libs/machine/core/: __init__.py  call.py  service.py
tests/integration/: test_charm.py  test_hpc_libs.yaml
tests/integration/is_container/: test_is_container.py
tests/integration/slurm_ops/: conftest.py  test_manager.py
tests/unit/: test_charm.py  test_is_container.py  test_slurm_ops.py
tests/unit/errors/: test_errors.py
tests/unit/interfaces/: test_interface.py
tests/unit/interfaces/oci_runtime/: mock_charms.py  test_oci_runtime.py
tests/unit/interfaces/sackd/: test_sackd.py
tests/unit/interfaces/slurmd/: mock_slurmd_charms.py  test_slurmd.py
tests/unit/interfaces/slurmdbd/: test_slurmdbd.py
tests/unit/interfaces/slurmrestd/: test_slurmrestd.py
tests/unit/machine/: test_env.py  test_snap.py  test_systemd.py
tests/unit/ops/: test_conditions.py  test_env.py  test_logging.py  test_network.py  test_secrets.py  test_snap.py  test_systemd.py
tests/unit/slurm_ops/: constants.py  test_apt.py  test_config.py  test_error.py  test_ops.py  test_snap.py
tests/unit/utils/: test_get_ingress_address.py  test_reconfigure.py  test_refresh.py
