# Copyright 2025-2026 Canonical Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "charmed-hpc-libs"
version = "0.3.0"
requires-python = ">=3.12"
description = "Collection of utilities to manage HPC related services."
authors = [
    { name = "Ubuntu High-Performance Computing", email = "hpc-ubuntu-group@canonical.com" },
]
maintainers = [
    { name = "Ubuntu High-Performance Computing", email = "hpc-ubuntu-group@canonical.com" },
]
license = "Apache-2.0"
readme = "README.md"
keywords = ["HPC", "administration", "orchestration", "utility"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Distributed Computing",
]

[project.optional-dependencies]
errors = []
interfaces = [
    "ops ~= 3.0",
]
ops = [
    "ops ~= 3.0",
    "python-dotenv>=1.1.1,<1.3.0",
    "pyyaml>=6.0.2",
]
all = [
    "charmed-hpc-libs[errors]",
    "charmed-hpc-libs[interfaces]",
    "charmed-hpc-libs[ops]",
]
dev = [
    "charmed-hpc-libs[all]",

    # Test deps
    "coverage[toml] ~= 7.6",
    "pyfakefs ~= 5.9",
    "pytest ~= 9.0",
    "pytest-mock ~= 3.0",
    "ops[testing] ~= 3.0",

    # Linting
    "ruff",
    "codespell",
    "pyright",

    # TiCS scan dependencies
    "flake8",
    "pylint",
    "pytest",
    "pyyaml",
]

[project.urls]
repository = "https://github.com/charmed-hpc/hpc-libs.git"
issues = "https://github.com/charmed-hpc/hpc-libs/issues"


# Testing tools configuration
[tool.coverage.run]
branch = true
include = [
    "src/**/*.py"
]
omit = [
    "src/**/machine/apt.py"
]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"

# Spell checking tools configuration
[tool.codespell]
skip = "lib,venv,icon.svg,.tox,.git,.mypy_cache,.ruff_cache,.pytest_cache,.vscode,.coverage,.venv,cover,./src/hpc_libs/machine/apt.py"

# Linting tools configuration
[tool.ruff]
line-length = 99
lint.select = ["E", "W", "F", "C", "N", "D", "I001"]
lint.extend-ignore = [
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
]
lint.ignore = ["E501", "D107"]
lint.per-file-ignores = { "**/tests/*" = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
] }
extend-exclude = ["__pycache__", "*.egg_info"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.pyright]
include = ["src/*"]
exclude = ["**/machine/apt.py"]
